--- a/config.toml
+++ b/config.toml
@@ -1,83 +1,80 @@
 baseURL = "https://puneethkosaraju.com/"
 languageCode = "en-us"
 title = "Puneeth Kosaraju"
-theme = "bilberry-hugo-theme"
+theme = "hugo-theme-cactus-plus"
 
-enableRobotsTXT = true
+googleAnalytics = "your_google_analytics_id"
 
-# Change to your content language. Supported values: en, de, es, fr, ru
-DefaultContentLanguage = "en"
-
-# Enable / Disable Google Analytics statistics for your site
-googleAnalytics = ""
-
-# Enable / Disable comments on the articles via Disqus.
-disqusShortname = "bilberry-hugo-theme"
-
-Copyright = "Sample Copyright"
+# Set the value to true if your site include CJK (Chinese, Japanese, and Korean languages) characters
+hasCJKLanguage = false
 
 [params]
-  # Favicon for the browser's favorites and tabs
-  favicon = "" # set a favicon icon
+	author = "site_author"
+	description = "puneethkosaraju.com Site Description"
+	bio = "full stack developer"
 
-  # Custom CSS / JS modules that will be imported by the template.
-  # Files are relative to the static/ directory or a URL.
-  # Files are imported in the order they appear here, after
-  # theme.css and theme.js, respectively.
-  css_modules = ["css/foo.css"]
-  js_modules = []
+	twitter = "your_twitter_id"
+	facebook = "your_facebook_id"
 
-  AuthorName = "Jon Doe"
+	enableRSS = true
+	enableToc = true
 
-  # Description and meta data for the search engines
-  author = "kosarp"
-  description = "My corner in the world wide web."
-  keywords = "blog, personal, programming, snippets, coding"
+	enableDisqus = true
+	disqusShortname = "your_disqus_short_name"
 
-  # How many articles should be displayed at once?
-  paginate = 7
 
-  # Enable / Disable MathJax
-  enable_mathjax    = true
+	enableSummary = true
+	# Set the value to true if use description in post front matter replace content summary
+	useDescriptionReplaceSummary = false
 
-  # Enable / Disable algolia search
-  algolia_search    = false
-  algolia_appId     = ""
-  algolia_apiKey    = ""
-  algolia_indexName = "default-content"
 
-  # Header configuration
-  # your subtitle if you want to use any
-  subtitle = "A library of code snippets"
+	enableGoogleAnalytics = true
+	enableBaiduAnalytics = false
+	# Set the value to your baidu analysis code if you want to use baidu analytics
+	baiduAnalytics = ''
 
-  # if you want to use gravatar for the header image
-  gravatarEMail = ""
+	enableTwitterCard = true
+	# The url for twitter card image, default is avatar.png in static/images directory
+	twitterCardImage = ""
 
-  # set an path to the image file you want to use | overwrites gravatar
-  customImage = ""
+	# Add custom assets with their paths relative to the static folder
+	customCSS = []
+	customJS  = []
 
-  # always display the top navigation (with pages and search) on non-mobile screens
-  permanentTopNav = true
+	# The variables below are optionally too and can be used to
+	# translate or customize each string of the theme.
 
-  # social media profile urls for the footer links
-  facebook   = ""
-  twitter    = "https://twitter.com/indianethic"
-  googleplus = ""
-  pinterest  = ""
-  instagram  = ""
-  tumblr     = ""
-  youtube    = ""
-  vimeo      = ""
-  github     = "https://github.com/puneethkosaraju"
-  xing       = ""
-  linkedin   = ""
+	# Navigation links
+	home = "home"
+	about = "about"
+	archive = "archive"
+	subscribe = "subscribe"
 
-# don't change anything here
-[taxonomies]
-  author   = "author"
-  tag      = "tags"
-  category = "categories"
+	olderPosts = "olderPosts"
+	newerPosts = "newerPosts"
+	copyright = "Sample Copyright Information Here"
 
-[outputs]
-  home = [ "HTML", "JSON" ]
-  page = [ "HTML" ]
+	# show latest posts in single page
+	showLatestPosts = false
+	readMore = ""
+
+	# Share
+	enableShare = true
+	tweet = ""
+	share = ""
+
+	# 404 page
+	title404 = ""
+	subtitle404 = ""
+
+	# Choose a font for the social icons in the footer. Either "mono-social" or "font-awesome"
+	iconFont = "font-awesome"
+  # The social icons can be styled differently if you use mono as font - circle, rounded, or empty
+  socialIconStyle = ""
+
+
+# Add additional social link entries underneath
+[social]
+	facebook-square = "https://www.facebook.com/puneeth.kosaraju"
+	twitter-square = "https://www.twitter.com/indianethic"
+	github-square = "https://www.github.com/puneethkosaraju"
